--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .pagination-bar {
+        @apply flex flex-row items-center justify-center 
+        
+    }
+
+    .pagination-container {
+        @apply flex items-center justify-center gap-x-3
+    }
+
+    .pagination-item {
+        @apply flex items-center justify-center cursor-pointer hover:bg-black hover:text-white dark:text-white dark:hover:text-gray-200 dark:hover:bg-gray-700
+        rounded-full w-6 h-6 hover:underline
+    }
+
+    .arrowBtns {
+        @apply  w-8 h-8 text-gray-400 dark:text-gray-500 hover:text-gray-500
+    }
+
+    .selected {
+        @apply text-red-500  hover:text-red-500 dark:text-red-500  hover:bg-gray-200 hover:dark:bg-gray-900
+    }
+}
