--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,27 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
-    .pagination-bar {
-        @apply flex flex-row items-center justify-center 
-        
-    }
+  .pagination-bar {
+    @apply flex flex-row items-center justify-center;
+  }
 
-    .pagination-container {
-        @apply flex items-center justify-center gap-x-3
-    }
+  .pagination-container {
+    @apply flex items-center justify-center gap-x-3;
+  }
 
-    .pagination-item {
-        @apply flex items-center justify-center cursor-pointer hover:bg-black hover:text-white dark:text-white dark:hover:text-gray-200 dark:hover:bg-gray-700
-        rounded-full w-6 h-6 hover:underline
-    }
+  .pagination-item {
+    @apply flex items-center justify-center w-6 h-6 rounded-full cursor-pointer hover:bg-black hover:text-white hover:underline dark:text-white dark:hover:bg-gray-700 dark:hover:text-gray-200;
+  }
 
-    .arrowBtns {
-        @apply  w-8 h-8 text-gray-400 dark:text-gray-500 hover:text-gray-500
-    }
+  .arrowBtns {
+    @apply w-8 h-8 text-gray-400 hover:text-gray-500 dark:text-gray-500;
+  }
 
-    .selected {
-        @apply text-red-500  hover:text-red-500 dark:text-red-500  hover:bg-gray-200 hover:dark:bg-gray-900
-    }
+  .selected {
+    @apply text-red-500 hover:bg-gray-200 hover:text-red-500 dark:text-red-500 hover:dark:bg-gray-900;
+  }
+  
+  .authInput {
+    @apply py-3 pl-2 italic placeholder-gray-100 border-b-[2px] rounded-sm outline-none placeholder:italic text-white bg-slate-400/50 border-slate-100 focus:border-red-800/70 hover:border-red-800/70 transition-all ;
+  }
 }
